--- a/modules/admin/src/resources/scss/components/_mainnav.scss
+++ b/modules/admin/src/resources/scss/components/_mainnav.scss
@@ -8,7 +8,6 @@
     padding: 5px 10px 10px;
     position: relative;
     width: 200px;
-    z-index: 150;
 
     &--small {
         flex: 0 0 62px;
